Add function return types, allow any user to create account
